Changed footer and alignement of list page

--- a/index.html
+++ b/index.html
@@ -106,19 +106,10 @@
     
     <footer>
         <p>
-            Copyright 2021
+            Made by Inês | See the code in my
+            <a href="https://github.com/inesber" target="_blank">GitHub
+            </a>
         </p>
-        <nav>
-            <a href="#">
-                <img src="images/icon-facebook.svg">
-            </a>
-            <a href="#">
-                <img src="images/icon-instagram.svg">
-            </a>
-            <a href="#">
-                <img src="images/icon-twitter.svg">
-            </a>
-        </nav>
     </footer>
 </body>
 </html>
